--- a/MessengerApp/MessengerUI/MessengerUI.csproj
+++ b/MessengerApp/MessengerUI/MessengerUI.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net9.0-windows</TargetFramework>
-    <RootNamespace>Messenger_UI</RootNamespace>
+    <RootNamespace>MessengerUI</RootNamespace>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
