--- a/MessengerApp/MessengerUI/MessengerUI.csproj
+++ b/MessengerApp/MessengerUI/MessengerUI.csproj
@@ -9,4 +9,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ApiFetcher\ApiFetcher.csproj" />
+  </ItemGroup>
+
 </Project>
