--- a/MessengerApp/MessengerUI/MessengerUI.csproj
+++ b/MessengerApp/MessengerUI/MessengerUI.csproj
@@ -13,4 +13,8 @@
     <ProjectReference Include="..\ApiFetcher\ApiFetcher.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
 </Project>
